# flip-flopper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  databricks.yml  pyproject.toml
config/: app.yaml
docs/runbooks/: databricks-serving-ab-test.md
docs/superpowers/plans/: 2026-04-09-catboost-mlflow-uc-job-implementation.md  2026-04-09-databricks-serving-ab-test-implementation.md  2026-06-10-create-dummy-data-job.md  2026-06-11-deploy-serving-endpoint.md  2026-06-11-train-lightgbm-job.md  2026-06-11-train-pytorch-mlp-job.md
docs/superpowers/specs/: 2026-04-09-catboost-mlflow-uc-job-design.md  2026-04-09-databricks-serving-ab-test-design.md  2026-04-25-serving-endpoint-job-design.md  2026-06-10-create-dummy-data-job-design.md  2026-06-10-train-logistic-regression-job-design.md  2026-06-11-deploy-serving-endpoint-design.md  2026-06-11-train-lightgbm-job-design.md
resources/: create_dummy_data.yml  deploy_classifier_endpoint.yml  deploy_serving_endpoint.yml  jobs.yml  run_full_classifier_pipeline.yml  run_pipeline.yml  train_classifier_a.yml  train_classifier_b.yml  train_classifier_catboost.yml  train_classifier_lightgbm.yml  train_lightgbm.yml  train_logistic_regression.yml  train_pytorch_mlp.yml  train_xgboost.yml
scripts/bundle-run/: update_endpoint_split.py
src/flip_flopper/: __init__.py  catboost_onnx.py  classifier_training.py  serving_deploy.py  sklearn_onnx.py
src/flip_flopper_ab_test/: config.py  controller.py  databricks_api.py  metrics_query.py  policy.py  serving_config.py
src/jobs/: bootstrap_endpoint.py  call_classifier_endpoint.ipynb  create_dummy_data.ipynb  deploy_classifier_endpoint.py  deploy_serving_endpoint.ipynb  run_traffic_controller.py  train_catboost_demo.py  train_classifier_a.ipynb  train_classifier_b.ipynb  train_classifier_catboost.ipynb  train_classifier_lightgbm.ipynb  train_lightgbm.ipynb  train_logistic_regression.ipynb  train_pytorch_mlp.ipynb  train_xgboost.ipynb
src/sql/: create_online_tables.sql
tests/: conftest.py  test_call_classifier_endpoint_notebook.py  test_catboost_onnx_export.py  test_classifier_training.py  test_deploy_classifier_endpoint_entrypoint.py  test_serving_deploy.py  test_sklearn_onnx.py  test_train_classifier_a_notebook.py  test_train_classifier_b_notebook.py  test_train_classifier_lightgbm_notebook.py  test_update_endpoint_split.py
tests/unit/: test_bundle_shape.py  test_config_yaml.py  test_controller.py  test_imports.py  test_metrics_query.py  test_policy.py  test_serving_config.py  test_train_catboost_demo_cli.py
