[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flip-flopper"
version = "0.1.0"
description = "Databricks serving A/B test controller"
requires-python = ">=3.11"
dependencies = [
  "mlflow>=3.11.1",
  "onnx>=1.21.0",
  "onnxruntime>=1.24.4",
  "pandas>=2.2.0",
  "scikit-learn>=1.8.0",
  "skl2onnx>=1.20.0",
]

[dependency-groups]
dev = ["pre-commit>=4.0.0", "pytest>=8.3.5", "ruff>=0.11.0"]

[tool.ruff]
extend-exclude = [".claude", ".cursor", ".databricks"]
builtins = ["dbutils", "spark"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
